[package]
authors = [
  "Maurits Bos <maurits.bos@gmail.com>",
  "Sunny Aggarwal <sunny@osmsosis.team>",
]
edition = "2018"
name = "tokenfactory-issuer"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
osmo-bindings = { git = "https://github.com/osmosis-labs/bindings", branch = "main" }
osmosis-std = { git = "https://github.com/osmosis-labs/osmosis-rust", branch = "main" }
prost = "0.11.0"
schemars = "0.8.8"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }
# This is a library that simplifies working with IBC response packets (acknowledgments, timeouts),
# contains bindings for the Neutron ICA adapter module (messages, responses, etc.) and provides
# various helper functions.
neutron-sdk = { git = "https://github.com/neutron-org/neutron-sdk", branch = "sdk/47" }


[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.19.0"
serde_json = "1.0.87"
